# TEMA-Live-v2

./: run_pipeline.py
.github/: todos.db
.github/workflows/: ci-fast.yml
Docs/: MERGE_GAP_AUDIT_SUMMARY.md
Template/: CMakeLists.txt  TEMA-TEMPLATE(NEW_).py  asset_strategy_summary.csv  bl_portfolio_metrics.csv  black_litterman_weights.csv  ml_diagnostics.csv  ml_hmm_state_params.csv  ml_parameter_grid_results.csv  ml_parameter_grid_top10.csv  ml_position_scalar_diagnostics.csv  portfolio_test_returns.csv  portfolio_test_returns_ml.csv  portfolio_train_returns.csv  portfolio_train_returns_ml.csv  vol_target_diagnostics.csv
scripts/: parity_harness.py  run_config_sweep.py  run_phase1_bayes_opt.py  run_phase1_dynamic_ensemble.py  run_phase4_feature_interactions.py  run_phase4_online_learning.py  run_stress_scenarios.py  validate_oos_gates.py
tests/: test_backtest_metrics.py  test_config_sweep.py  test_cpp_bridge.py  test_hardening_m2_m6.py  test_integration_pipeline_manifest.py  test_ml_modular_path.py  test_monitoring_ledger.py  test_parity_output_series.py  test_phase1_bayesian_hyperopt.py  test_phase1_dynamic_ensemble.py  test_phase4_feature_interactions.py  test_phase4_online_learning.py  test_phase5_stress_scenarios.py  test_pipeline_modular_data_signals.py  test_portfolio_allocation.py  test_regime_report.py  test_run_pipeline_wiring.py  test_runner_orchestration.py  test_splitter.py  test_strategy_returns.py  test_strategy_returns_template_grid.py  test_tema_data.py  test_tema_signals.py  test_template_portfolio_default.py  test_validate_oos_gates.py
(+785 files in other folders)
